edited figure alittle
eddited figures a little

--- a/Template.tex
+++ b/Template.tex
@@ -52,7 +52,7 @@
 \title{Hexapod Robot}
 
 \author{\IEEEauthorblockN{
-Aidan Barber,Aidan Thomas Vine, Harnoordeep Grewal and Julius Atherton \\
+Aidan Barber,Aidan Vine, Harnoordeep Grewal and Julius Atherton \\
 Faculty of Engineering and Applied Science, \\
 OntarioTech University, Oshawa, Ontario, Canada\\
 Aidan.barber@ontariotechu.net,
