--- a/Actuators and Power Electronics Report.tex
+++ b/Actuators and Power Electronics Report.tex
@@ -52,7 +52,7 @@
 \title{Hexapod Robot}
 
 \author{\IEEEauthorblockN{
-Aidan Barber, Aidan Vine, Harnoordeep Grewal and Julius Atherton \\
+Aidan Barber, Aidan Thomas Vine, Harnoordeep Grewal and Julius Atherton \\
 Faculty of Engineering and Applied Science, \\
 OntarioTech University, Oshawa, Ontario, Canada\\
 Aidan.barber@ontariotechu.net,
@@ -215,7 +215,7 @@ You can reference the equations above in your document by using their defined la
 % You can manipulate the size of the image/figure by changing the value for width = ?\textwidth.
 \begin{figure}
    \centering
-   \includegraphics[width = 0.45\textwidth,natwidth=610,natheight=642]{figures/21.pdf}
+   \includegraphics[width = 0.45\textwidth]{figures/21.pdf}
    \caption{An example figure. Figure captions should provide sufficient information to understand the image.}
    \label{fig:mySampleFigure}
 \end{figure}
@@ -229,7 +229,7 @@ All figures should be clearly explained in the text. Furthermore, all figures sh
 
 \begin{figure}[H]
     \centering
-	\includegraphics[width = 0.45\textwidth,natwidth=610,natheight=642]{figures/19.pdf}
+	\includegraphics[width = 0.45\textwidth]{figures/19.pdf}
 	\caption{An example figure. Figure captions should provide sufficient information to understand the image.}
     \label{fig:myOtherSampleFigure}
 \end{figure}
