--- a/Template.tex
+++ b/Template.tex
@@ -1,6 +1,6 @@
 % METE 3100 : Actuators and Power Electronics 
 % This is a default template to help you create a report in the format used for an IEEE conference paper.
-% Please take the time to review and beome familliar with the the syntax and structure of the document.
+% Please take the time to review and become familiar with the the syntax and structure of the document.
 % Text/Code that is preceded with a "%" sign is commented out - meaning the compiler ignores that line.
 % To utilize a Latex function, a "\" precedes the command. For example, to cite a document the command is \cite{ }
 
